# dwalls

./: .gitignore  CMakeLists.txt  Findheif.cmake  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
include/heic_processor/: heic_processor.h
src/: CMakeLists.txt  Info.plist  main.cpp
src/heic_processor/: heic_processor.cpp
